fixes for init process
fix description of db:install
fix incorrect message if user is not found during login
fix uncapitalized Create button on register page
improve error page for incorrect db setup, and fix command

--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -97,7 +97,7 @@
 
         <!-- SUBMIT -->
         <div class='mt-4 text-center'>
-          <button type='submit' name='Submit' class='btn btn-primary'>{{ 'create'|trans }}</button>
+          <button type='submit' name='Submit' class='btn btn-primary'>{{ 'Create'|trans }}</button>
         </div>
       </div>
     </form>
