fix incorrect wording for "Show related exp/items"

--- a/src/templates/steps-links-view.html
+++ b/src/templates/steps-links-view.html
@@ -135,9 +135,9 @@
       </div>
     </div>
 
-    <div title='{{ 'Show linked experiments'|trans }}' class='ml-3 mt-3'>
+    <div class='ml-3 mt-3'>
       <i class='fas fa-list mr-1 fa-fw'></i>
-      <a href='experiments.php?mode=show&related={{ Entity.id }}'>{{ 'Show linked experiments'|trans }}</a>
+      <a href='experiments.php?mode=show&related={{ Entity.id }}'>{{ 'Show related experiments'|trans }}</a>
     </div>
     <hr>
   {% endif %}
@@ -173,9 +173,9 @@
       </div>
     </div>
 
-    <div title='{{ 'Show linked items'|trans }}' class='ml-3 mt-3'>
+    <div class='ml-3 mt-3'>
       <i class='fas fa-list mr-1 fa-fw'></i>
-      <a href='database.php?mode=show&related={{ Entity.id }}'>{{ 'Show linked items'|trans }}</a>
+      <a href='database.php?mode=show&related={{ Entity.id }}'>{{ 'Show related items'|trans }}</a>
     </div>
     <hr>
   {% endif %}
