--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -66,11 +66,8 @@
         <i class='fas fa-tags mr-1'></i>{{ 'Tags'|trans }}
       </div>
       <span class='tags mathjax-ignore d-flex-inline flex-wrap'>
-        {% set tagsIdArr = Entity.entityData.tags_id|split(',') %}
-        {% set tagsValueArr = Entity.entityData.tags|split('|') %}
-        {% for key, tag in tagsValueArr %}
-          {# the key allows to get the id stored in tagsIdArr #}
-          <a class='tag' href='?mode=show&tags%5B%5D={{ tag|url_encode }}'>{{ tag|raw }}</a>
+        {% for tag in Entity.Tags.readAll() %}
+        <a class='tag {{ tag.is_favorite ? 'favorite'}}' href='?mode=show&tags%5B%5D={{ tag.tag|url_encode }}'>{{ tag.tag|raw }}</a>
         {% endfor %}
       </span>
     {% endif %}
