--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -279,7 +279,7 @@
     </div>
 
   {% if App.Request.query.has('templateid') %}
-    <a href='?tab=5'>
+    <a href='?tab=5' class='btn hl-hover-gray'>
       <i class='fas fa-chevron-left mr-1'></i>{{ 'Back to listing'|trans }}
     </a>
   {% else %}
