--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -93,10 +93,8 @@
               {# SWITCH EDITOR the data-editor is here to indicate which is the current editor #}
               <a class='dropdown-item' id='iHazEditor' data-action='switch-editor' data-editor='{{ editor }}' href='#'><i class='fas fa-pencil-alt fa-fw'></i> {{ 'Switch editor'|trans }}</a>
             {% endif %}
-            <!-- REVISIONS -->
-            {% if revNum > 0 %}
-              <a class='dropdown-item' href='revisions.php?type={{ Entity.type }}&item_id={{ Entity.id }}'><i class='fas fa-history fa-fw'></i> {{ revNum }} {% trans %}revision available{% plural revNum %}revisions available{% endtrans %}</a>
-            {% endif %}
+            {# REVISIONS #}
+            <a class='dropdown-item' href='revisions.php?type={{ Entity.type }}&item_id={{ Entity.id }}'><i class='fas fa-history fa-fw'></i> {{ 'See revisions'|trans }}</a>
             <!-- CHANGELOG -->
             <a class='dropdown-item' href='?templateid={{ Entity.id }}&mode=changelog&tab=3'><i class='fas fa-list fa-fw'></i> {{ 'See changelog'|trans }}</a>
 
