--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -493,6 +493,10 @@ button:disabled {
     color: #000;
 }
 
+.opacity-8 {
+    opacity: 0.8;
+}
+
 .full-screen-overlay {
     background: rgba(0, 0, 0, 0.8);
     height: 100vh;
