--- a/src/templates/mfa.html
+++ b/src/templates/mfa.html
@@ -33,7 +33,7 @@
     {% endif %}
     <div class='col-md-4 mx-auto mt-4 form-group'>
       <label for='mfa_code'>{{ 'Authentication code'|trans }}</label>
-      <input class='form-control mb-4 text-center' id='mfa_code' name='mfa_code' type='text' pattern='.{6}' aria-describedby='mfa_code_help_block' />
+      <input class='form-control mb-4 text-center' id='mfa_code' name='mfa_code' type='text' pattern='.{6}' aria-describedby='mfa_code_help_block' data-focus='1' />
       <p id='mfa_code_help_block' class='form-text text-muted'>{{ 'Open the authenticator app on your device to get your authentication code and verify your identity.'|trans }}</p>
     </div>
     <button type='submit' class='btn btn-primary' name='Submit' value='submit'>{{ 'Verify'|trans }}</button>
