--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -1,4 +1,5 @@
 {% set mode = App.Request.query.get('mode') | default('view') %}
+{% include('ownership-transfer-modal.html') %}
 
 {# TOP TOOLBAR #}
 <hr>
@@ -97,6 +98,10 @@
             <a class='dropdown-item' href='revisions.php?type={{ Entity.type }}&item_id={{ Entity.id }}'><i class='fas fa-history fa-fw'></i> {{ 'See revisions'|trans }}</a>
             <!-- CHANGELOG -->
             <a class='dropdown-item' href='?templateid={{ Entity.id }}&mode=changelog&tab=3'><i class='fas fa-list fa-fw'></i> {{ 'See changelog'|trans }}</a>
+            {# TRANSFER OWNERSHIP #}
+            {% if Entity.entityData.userid == App.Users.userData.userid or App.Users.isAdmin %}
+              <a class='dropdown-item' data-action='toggle-modal' data-target='ownerModal'><i class='fas fa-people-arrows fa-fw' title='{{ 'Manage Permissions'|trans }}'></i> {{ 'Transfer ownership'|trans }}</a>
+            {% endif %}
 
             {# DELETE #}
             {% if not Entity.entityData.locked %}
