add time input for extra fields. fix #4411

--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -40,6 +40,7 @@
               <option value='select'>{{ 'Dropdown menu'|trans }}</option>
               <option value='radio'>{{ 'Radio buttons'|trans }}</option>
               <option value='date'>{{ 'Date'|trans }}</option>
+              <option value='time'>{{ 'Time'|trans }}</option>
               <option value='checkbox'>{{ 'Checkbox'|trans }}</option>
               <option value='number'>{{ 'Number'|trans }}</option>
               <option value='url'>URL</option>
