--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -287,11 +287,11 @@
 
     <div class='pl-3 mb-5'>
       <div class='d-flex justify-content-between'>
-        <label for='currpass' class='col-form-label'>{{ 'Enter your password to edit your profile.'|trans }}</label>
+        <label for='current_password' class='col-form-label'>{{ 'Enter your password to edit your profile.'|trans }}</label>
         <div class='input-group col-md-3 px-0'>
-          <input class='form-control' id='currpass' name='currpass' type='password' autocomplete='current-password' pattern='.{8,}' required />
+          <input class='form-control' id='current_password' name='current_password' type='password' autocomplete='current-password' pattern='.{8,}' required />
           <div class='input-group-append'>
-            <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='currpass'><i class='fas fa-eye' aria-hidden='true'></i></span>
+            <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='current_password'><i class='fas fa-eye' aria-hidden='true'></i></span>
           </div>
         </div>
       </div>
@@ -307,11 +307,11 @@
       <hr>
 
       <div class='d-flex justify-content-between'>
-        <label for='newpass' class='col-form-label'>{{ 'Modify your password'|trans }}</label>
+        <label for='password' class='col-form-label'>{{ 'Modify your password'|trans }}</label>
         <div class='input-group col-md-3 px-0'>
-          <input class='form-control' id='newpass' name='newpass' type='password' pattern='.{8,}' autocomplete='new-password' />
+          <input class='form-control' id='password' name='password' type='password' pattern='.{8,}' autocomplete='new-password' />
           <div class='input-group-append'>
-            <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='newpass'><i class='fas fa-eye' aria-hidden='true'></i></span>
+            <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='password'><i class='fas fa-eye' aria-hidden='true'></i></span>
           </div>
         </div>
       </div>
