add datetime and email extra fields types

--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -40,6 +40,8 @@
               <option value='select'>{{ 'Dropdown menu'|trans }}</option>
               <option value='radio'>{{ 'Radio buttons'|trans }}</option>
               <option value='date'>{{ 'Date'|trans }}</option>
+              <option value='datetime-local'>{{ 'Date and time'|trans }}</option>
+              <option value='email'>{{ 'Email'|trans }}</option>
               <option value='time'>{{ 'Time'|trans }}</option>
               <option value='checkbox'>{{ 'Checkbox'|trans }}</option>
               <option value='number'>{{ 'Number'|trans }}</option>
