improve required extra fields handling. fix #4060
add red star, red border if invalid and required switch on builder

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -446,6 +446,19 @@ button:disabled {
     }
 }
 
+/* required labels/input for extra fields */
+#metadataDiv {
+    /* target the required fields, but only if they are invalid: empty or incorrect */
+    [required]:invalid {
+        border: 1px solid $lightred;
+    }
+
+    .required-label::after {
+        color: $dangerred;
+        content: ' *';
+    }
+}
+
 .margin-1px {
     margin: 1px;
 }
