--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -78,7 +78,7 @@
   <!-- SHOW EVENTS -->
   {% if Entity.entityData.events_start %}<i class='far fa-calendar-alt'></i>
     {% for event in Entity.entityData.events_start|split('|') %}
-    <a href='team.php?item={{ entity.id }}&start={{ event|url_encode }}'>
+    <a href='team.php?item={{ Entity.id }}&start={{ event|url_encode }}'>
       <button class='m-1 btn btn-neutral relative-moment' title='{{ event|date('Y-m-d H:i:s') }}'></button>
     </a>
     {% endfor %}
