--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -64,25 +64,26 @@
             </div>
         </div>
 
-
-        <h5>{{ 'Cancel booking slot'|trans }}</h5>
-        <h6>{{ 'Add a custom message'|trans }}</h6>
-          <textarea id='cancelEventTextarea' class='form-control'></textarea>
-          <label>{{ 'Send to'|trans }}</label>
-          <div class='form-check'>
-            <input class='form-check-input' type='radio' name='targetCancelEvent' value='users' id='targetCancelEventUsers' checked> <label class='form-check-label' for='targetCancelEventUsers'>{{ 'Past and future users who booked this resource'|trans }}</label>
-          </div>
-          <div class='form-check'>
-            <input class='form-check-input' type='radio' name='targetCancelEvent' value='team' id='targetCancelEventTeam'> <label class='form-check-label' for='targetCancelEventTeam'>{{ 'Members of team %s'|trans|format(App.teamArr.name|raw) }}</label>
-          </div>
-          {% for teamgroup in teamGroupsArr %}
+        <div id='bookModalCancelDiv'>
+          <h5>{{ 'Cancel booking slot'|trans }}</h5>
+          <h6>{{ 'Add a custom message'|trans }}</h6>
+            <textarea id='cancelEventTextarea' class='form-control'></textarea>
+            <label>{{ 'Send to'|trans }}</label>
             <div class='form-check'>
-              <input class='form-check-input' type='radio' name='targetCancelEvent' value='teamgroup_{{ teamgroup.id }}' id='targetCancelEventTeamgroup_{{ teamgroup.id }}'> <label class='form-check-label' for='targetCancelEventTeamgroup_{{ teamgroup.id }}'>{{ 'Members of teamgroup %s'|trans|format(teamgroup.name|raw) }}</label>
+              <input class='form-check-input' type='radio' name='targetCancelEvent' value='users' id='targetCancelEventUsers' checked> <label class='form-check-label' for='targetCancelEventUsers'>{{ 'Past and future users who booked this resource'|trans }}</label>
             </div>
-          {% endfor %}
-          <div class='mt-2'>
-            <button type='button' data-action='cancel-event-with-message' data-id='' class='btn btn-danger cancelEventBtn'>{{ 'Send message and cancel'|trans }}</button>
-            <button type='button' data-action='cancel-event' data-id='' class='btn btn-danger cancelEventBtn'>{{ 'Cancel'|trans }}</button>
+            <div class='form-check'>
+              <input class='form-check-input' type='radio' name='targetCancelEvent' value='team' id='targetCancelEventTeam'> <label class='form-check-label' for='targetCancelEventTeam'>{{ 'Members of team %s'|trans|format(App.teamArr.name|raw) }}</label>
+            </div>
+            {% for teamgroup in teamGroupsArr %}
+              <div class='form-check'>
+                <input class='form-check-input' type='radio' name='targetCancelEvent' value='teamgroup_{{ teamgroup.id }}' id='targetCancelEventTeamgroup_{{ teamgroup.id }}'> <label class='form-check-label' for='targetCancelEventTeamgroup_{{ teamgroup.id }}'>{{ 'Members of teamgroup %s'|trans|format(teamgroup.name|raw) }}</label>
+              </div>
+            {% endfor %}
+            <div class='mt-2'>
+              <button type='button' data-action='cancel-event-with-message' data-id='' class='btn btn-danger cancelEventBtn'>{{ 'Send message and cancel'|trans }}</button>
+              <button type='button' data-action='cancel-event' data-id='' class='btn btn-danger cancelEventBtn'>{{ 'Cancel'|trans }}</button>
+          </div>
         </div>
       </div>
       <div class='modal-footer'>
