--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -83,9 +83,7 @@
   {# PERMISSIONS #}
   {% include('edit-permissions.html') %}
 
-
-
-  <!-- BODY -->
+  {# BODY #}
   <div class='mt-4' {{ not displayMainText ? 'hidden' }}>{# << this div is important around the textarea to fix an issue on mobile editor. See #3107 #}
     {% if editor == 'md' %}
       <textarea aria-label='{{ 'Main content'|trans }}' id='body_area' class='markdown-textarea' data-language='{{ App.getJsLang }}' name='body'>{{ Entity.entityData.body }}</textarea>
@@ -95,12 +93,10 @@
     {% endif %}
   </div>
 
-
   <div class='mt-4 text-center'>
     <button {{ not displayMainText ? 'hidden' }} data-action='update-entity-body' class='btn btn-primary'>{{ 'Save'|trans }}</button>
     <button data-action='update-entity-body' data-redirect='view' class='btn btn-secondary'>{{ 'Save and go back'|trans }}</button>
   </div>
-
 
 </section>
 
